--- a/Client/main/package.json
+++ b/Client/main/package.json
@@ -11,15 +11,13 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-
-    "react-redux": "^7.2.4",
-    "react-router": "^5.2.0",
-
     "react-google-login": "^5.2.2",
+    "react-redux": "^7.2.4",
     "react-reveal": "^1.2.2",
-
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
