--- a/Client/main/package.json
+++ b/Client/main/package.json
@@ -22,7 +22,24 @@
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
     "thunk": "0.0.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "antd": "^4.1.4",
+    "bootstrap": "^4.4.1",
+    "concurrently": "^5.1.0",
+    "faker": "^4.1.0",
+    "query-string": "^7.0.1",
+    "react-bootstrap": "^1.0.0",
+    "react-css-grid": "^2.0.0-0",
+    "react-emoji": "^0.5.0",
+    "react-flexbox-grid": "^2.1.2",
+    "react-grid-layout": "^0.18.3",
+    "react-grid-system": "^6.3.0",
+    "react-native": "^0.62.1",
+    "react-scroll-to-bottom": "^4.1.2",
+    "reactstrap": "^8.4.1",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
+    "standard": "^14.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
